{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 49,
  "lineage": "641a39ef-ddb0-9313-3259-030778fb388a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0aa761682283b4cc8",
            "arn": "arn:aws:ec2:ap-south-1:347908277998:instance/i-0d6cdd9625735989a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins-instance-profile",
            "id": "i-0d6cdd9625735989a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "new",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-081ebaa25c500c56c"
              }
            ],
            "primary_network_interface_id": "eni-081ebaa25c500c56c",
            "private_dns": "ip-10-0-0-232.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.232",
            "public_ip": "15.206.171.12",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c142619d4bffdad3",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0026dcb745a4e387c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d20997cd656ebec8",
            "tags": {
              "Name": "jenkins-server"
            },
            "tags_all": {
              "Name": "jenkins-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0026dcb745a4e387c"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "347908277998",
            "id": "i-0d6cdd9625735989a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.our-instance-profile",
            "aws_iam_role.our-iam-role",
            "aws_security_group.our-security-group",
            "aws_subnet.our-public-subnet",
            "aws_vpc.our-vpc",
            "data.aws_ami.latest",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nexus-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0aa761682283b4cc8",
            "arn": "arn:aws:ec2:ap-south-1:347908277998:instance/i-02d5fc964b4495850",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02d5fc964b4495850",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "new",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03fabf10be312ad3b"
              }
            ],
            "primary_network_interface_id": "eni-03fabf10be312ad3b",
            "private_dns": "ip-10-0-0-165.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.165",
            "public_ip": "13.206.185.151",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04682c5dab9c52a71",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08a599c35d4333746"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d20997cd656ebec8",
            "tags": {
              "Name": "nexus-server"
            },
            "tags_all": {
              "Name": "nexus-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08a599c35d4333746"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "347908277998",
            "id": "i-02d5fc964b4495850",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.our-security-group-for-nexus",
            "aws_subnet.our-public-subnet",
            "aws_vpc.our-vpc",
            "data.aws_ami.latest",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonar-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0aa761682283b4cc8",
            "arn": "arn:aws:ec2:ap-south-1:347908277998:instance/i-039e4d8562e9bad4e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-039e4d8562e9bad4e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "new",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d653564aade5b1ad"
              }
            ],
            "primary_network_interface_id": "eni-0d653564aade5b1ad",
            "private_dns": "ip-10-0-0-113.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.113",
            "public_ip": "65.2.178.46",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07db046fb7e798666",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-00845e3f11d4979de"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d20997cd656ebec8",
            "tags": {
              "Name": "sonar-server"
            },
            "tags_all": {
              "Name": "sonar-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00845e3f11d4979de"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "347908277998",
            "id": "i-039e4d8562e9bad4e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.our-Security-Group-for-sonar",
            "aws_subnet.our-public-subnet",
            "aws_vpc.our-vpc",
            "data.aws_ami.latest",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "our-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:347908277998:internet-gateway/igw-00a59c0d95fa0d01f",
            "id": "igw-00a59c0d95fa0d01f",
            "owner_id": "347908277998",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "Our-IGW"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-IGW"
            },
            "vpc_id": "vpc-0f84dbba8c170c4d1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "347908277998",
            "id": "igw-00a59c0d95fa0d01f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "our-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00a59c0d95fa0d01f",
            "id": "r-rtb-0c0617b628efc31111080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c0617b628efc3111",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "347908277998",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-0c0617b628efc3111"
          },
          "dependencies": [
            "aws_internet_gateway.our-igw",
            "aws_route_table.our-public-route-table",
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "our-public-route2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00a59c0d95fa0d01f",
            "id": "r-rtb-02624d74f866b10911080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-02624d74f866b1091",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "347908277998",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-02624d74f866b1091"
          },
          "dependencies": [
            "aws_internet_gateway.our-igw",
            "aws_route_table.our-public-route-table2",
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "our-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:347908277998:route-table/rtb-0a3fb54b32da79e4a",
            "id": "rtb-0a3fb54b32da79e4a",
            "owner_id": "347908277998",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Our-Private-Route-Table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f84dbba8c170c4d1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "347908277998",
            "id": "rtb-0a3fb54b32da79e4a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "our-private-route-table2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:347908277998:route-table/rtb-052a1439003a7122b",
            "id": "rtb-052a1439003a7122b",
            "owner_id": "347908277998",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Our-Private-Route-Table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f84dbba8c170c4d1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "347908277998",
            "id": "rtb-052a1439003a7122b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "our-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:347908277998:route-table/rtb-0c0617b628efc3111",
            "id": "rtb-0c0617b628efc3111",
            "owner_id": "347908277998",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00a59c0d95fa0d01f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "Our-Public-Route-Table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f84dbba8c170c4d1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "347908277998",
            "id": "rtb-0c0617b628efc3111",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "our-public-route-table2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:347908277998:route-table/rtb-02624d74f866b1091",
            "id": "rtb-02624d74f866b1091",
            "owner_id": "347908277998",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00a59c0d95fa0d01f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "Our-Public-Route-Table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f84dbba8c170c4d1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "347908277998",
            "id": "rtb-02624d74f866b1091",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "our-private-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da4f72b5a9d523b5",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a3fb54b32da79e4a",
            "subnet_id": "subnet-0c0d8f2a44e11b851"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "347908277998",
            "id": "rtbassoc-0da4f72b5a9d523b5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_route_table.our-private-route-table",
            "aws_subnet.our-private-subnet",
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "our-private-route-table-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05674e42337eefe93",
            "region": "ap-south-1",
            "route_table_id": "rtb-052a1439003a7122b",
            "subnet_id": "subnet-0db937b77bcf22170"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "347908277998",
            "id": "rtbassoc-05674e42337eefe93",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_route_table.our-private-route-table2",
            "aws_subnet.our-private-subnet2",
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "our-public-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e2c39b48a4c77e6",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c0617b628efc3111",
            "subnet_id": "subnet-0d20997cd656ebec8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "347908277998",
            "id": "rtbassoc-02e2c39b48a4c77e6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_route_table.our-public-route-table",
            "aws_subnet.our-public-subnet",
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "our-public-route-table-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0806c0dcdb831d87e",
            "region": "ap-south-1",
            "route_table_id": "rtb-02624d74f866b1091",
            "subnet_id": "subnet-05d89274d16e6529d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "347908277998",
            "id": "rtbassoc-0806c0dcdb831d87e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_route_table.our-public-route-table2",
            "aws_subnet.our-public-subnet2",
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "our-Security-Group-for-sonar",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:347908277998:security-group/sg-00845e3f11d4979de",
            "description": "Our Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00845e3f11d4979de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "OOur-Security-Group-for-sonar",
            "name_prefix": "",
            "owner_id": "347908277998",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Our-Security-Group-for-sonar"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Security-Group-for-sonar"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f84dbba8c170c4d1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "347908277998",
            "id": "sg-00845e3f11d4979de",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "our-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:347908277998:security-group/sg-0026dcb745a4e387c",
            "description": "Our Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0026dcb745a4e387c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Our-Security-Group",
            "name_prefix": "",
            "owner_id": "347908277998",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Our-Security-Group"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f84dbba8c170c4d1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "347908277998",
            "id": "sg-0026dcb745a4e387c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "our-security-group-for-nexus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:347908277998:security-group/sg-08a599c35d4333746",
            "description": "Our Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a599c35d4333746",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Our-Security-Group-for-nexus",
            "name_prefix": "",
            "owner_id": "347908277998",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Our-Security-Group-for-nexus"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Security-Group-for-nexus"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f84dbba8c170c4d1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "347908277998",
            "id": "sg-08a599c35d4333746",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "our-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:347908277998:subnet/subnet-0c0d8f2a44e11b851",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0d8f2a44e11b851",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "347908277998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "Our-Private-Subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Private-Subnet"
            },
            "vpc_id": "vpc-0f84dbba8c170c4d1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "347908277998",
            "id": "subnet-0c0d8f2a44e11b851",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "our-private-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:347908277998:subnet/subnet-0db937b77bcf22170",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db937b77bcf22170",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "347908277998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "Our-Private-Subnet2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Private-Subnet2"
            },
            "vpc_id": "vpc-0f84dbba8c170c4d1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "347908277998",
            "id": "subnet-0db937b77bcf22170",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "our-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:347908277998:subnet/subnet-0d20997cd656ebec8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d20997cd656ebec8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "347908277998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "Our-Public-Subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Public-Subnet"
            },
            "vpc_id": "vpc-0f84dbba8c170c4d1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "347908277998",
            "id": "subnet-0d20997cd656ebec8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "our-public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:347908277998:subnet/subnet-05d89274d16e6529d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d89274d16e6529d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "347908277998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "Our-Public-Subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Public-Subnet"
            },
            "vpc_id": "vpc-0f84dbba8c170c4d1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "347908277998",
            "id": "subnet-05d89274d16e6529d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "our-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:347908277998:vpc/vpc-0f84dbba8c170c4d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03740aed626049f0d",
            "default_route_table_id": "rtb-04503e59813b8e26b",
            "default_security_group_id": "sg-039b828df6dc7549f",
            "dhcp_options_id": "dopt-0340ad86ce68d7339",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f84dbba8c170c4d1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04503e59813b8e26b",
            "owner_id": "347908277998",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "Our-VPC"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "347908277998",
            "id": "vpc-0f84dbba8c170c4d1",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}